--- a/jenkinsFile
+++ b/jenkinsFile
@@ -34,7 +34,7 @@ pipeline {
 		stage('Start Docker Compose') {
             steps {
                 script {
-                    sh 'docker-compose -f docker-compose.yml -f docker-compose.dev.yml up -d'
+                    sh 'docker compose -f docker-compose.yml -f docker-compose.dev.yml up'
                 }
             }
         }
